# eventide

./: .env  .env.example  .gitignore  404.html  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum  index.html  sitemap.xml
.github/workflows/: build.yml  deploy-docs.yml  release-sdk.yml
assets/js/: 0b8f7c85.2effdfdb.js  0b8f7c85.d581bf29.js  0e384e19.0d3fb2db.js  0e384e19.9d3bcb87.js  17896441.1d0516eb.js  18c41134.6b43ffad.js  18c41134.827c237f.js  19633e60.bf91ef17.js  1df93b7f.6659b09e.js  1e4232ab.966e9046.js  1e4232ab.a7df25a2.js  1fec8cd3.f72cc0a7.js  2a4524c4.40e8c983.js  393be207.cc609903.js  51675231.69043225.js  533a09ca.1477215d.js  533a09ca.cd31f578.js  59362658.1b50055b.js  5c868d36.44cfac9c.js  5c868d36.e4bd8a99.js  5dbdd210.38b21e16.js  72415c64.0d615d60.js  72415c64.2309bdc7.js  72415c64.5cffe127.js  72415c64.67663a5f.js  73664a40.cd3884e8.js  73bf75fd.09962e98.js  750ac5e7.47aaa5c4.js  7661071f.a4cc02e3.js  7698f6f9.7708b21d.js  7c962f4b.fdf9f558.js  814f3328.a2413271.js  822bd8ab.7c02f4b5.js  822bd8ab.cce34318.js  8717b14a.b5d2fa4f.js  8ddb7317.45d96e9e.js  8ddb7317.a287b08e.js  8f02321c.200b6b99.js  925b3f96.20b36d73.js  964ae018.a5dafe57.js  (+31 more)
blog/: atom.xml  index.html  rss.xml
blog/archive/: index.html
blog/authors/: index.html
blog/first-blog-post/: index.html
blog/long-blog-post/: index.html
blog/mdx-blog-post/: index.html
blog/tags/: index.html
blog/welcome/: index.html
charts/eventide/: Chart.yaml  values.yaml
charts/litellm/: Chart.yaml
cmd/archiver/: main.go
cmd/beacon/: main.go
cmd/event-gateway/: main.go
cmd/event-sidecar/: main.go
cmd/gateway/: main.go
cmd/migrate/: main.go
cmd/persister/: main.go
cmd/read-api/: main.go
cmd/realtime/: main.go
cmd/reference-agent/: main.go
docs/: events.md  system-design.txt
docs/api-reference/: index.html
example/001-simple-agent/: agent.py  main.py  pyproject.toml
example/003-open-deep-perplexity-agent/: agent.py  main.py  pyproject.toml
example/004-simple-agent-with-files/: agent.py  main.py  pyproject.toml  tools.py
markdown-page/: index.html
migrations/: 001_init.sql  002_archives.sql
playground/: Dockerfile  test-component.sh
playground/backend/: main.py  models.py  pyproject.toml  store.py  test_download.py  test_submit.py  test_upload.py
scripts/: run-local-m1.sh  run-local-m25.sh
sdk/python/: README.md  example.py  pyproject.toml  test_sdk.py
sdk/python/eventide/: __init__.py  client.py  component.py  types.py
seaweedfs/: s3.json
website/: docusaurus.config.ts  package-lock.json  sidebars.ts
(+100 files in other folders)
