[project]
name = "open-deep-perplexity-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.1.0",
    "dotenv>=0.9.9",
    "eventide-sdk>=0.1.4",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.9",
    "langgraph>=1.0.8",
    "openai>=2.21.0",
    "tavily>=0.4.0",
]
