[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.1",
    "httpx>=0.28.1",
    "kubernetes>=35.0.0",
    "pydantic>=2.12.5",
    "sse-starlette>=3.2.0",
    "uvicorn>=0.41.0",
]
